# numpyro_schechter

./: .gitignore  .readthedocs.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: Makefile  conf.py  index.rst  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  numpyro_schechter.rst
src/numpyro_schechter/: distribution.py  math_utils.py
tests/: test_distribution.py  test_math_utils.py
