[tool.poetry]
name = "numpyro_schechter"
version = "0.0.1a4"
description = "Schechter galaxy luminosity distribution for NumPyro."
authors = ["Alice Serene <aserene@swin.edu.au>"]
readme = "README.md"
license = "MIT"
packages = [{ include = "numpyro_schechter", from = "src" }]
keywords = ["numpyro", "schechter", "astronomy", "bayesian", "distribution"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = ">=3.11"
jax = "*"
jaxlib = "*"
numpyro = "*"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2"
sympy = "^1.12"
twine = "^6.1.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7"
sphinx-rtd-theme = "^3.0"
myst-parser = "^2.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.poetry.urls]
Homepage = "https://github.com/alserene/numpyro_schechter"
Issues = "https://github.com/alserene/numpyro_schechter/issues"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
